--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="./Modul7/scss/index.css" />
     <!-- контент -->
 <ul class="list">
-  <li><a href="./task-1.html">task-1</a></li>
-  <li><a href="./task-2.html">task-2</a></li>
-  <li><a href="./task-3.html">task-3</a></li>
-  <li><a href="./task-4.html">task-4</a></li>
-  <li><a href="./task-5.html">task-5</a></li>
-  <li><a href="./task-6.html">task-6</a></li>
-  <li><a href="./task-7.html">task-7</a></li>
+  <li><a href="./Modul7/task-1.html">task-1</a></li>
+  <li><a href="./Modul7/task-2.html">task-2</a></li>
+  <li><a href="./Modul7/task-3.html">task-3</a></li>
+  <li><a href="./Modul7/task-4.html">task-4</a></li>
+  <li><a href="./Modul7/task-5.html">task-5</a></li>
+  <li><a href="./Modul7/task-6.html">task-6</a></li>
+  <li><a href="./Modul7/task-7.html">task-7</a></li>
 </ul>
 
   </body>
