--- a/Modul7/task-3.html
+++ b/Modul7/task-3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>JavaScript is fun!</title>
-    <link rel="stylesheet" href="./Modul7/scss/task-3.css" />
+    <link rel="stylesheet" href="./scss/task-3.css" />
   </head>
 
   <body>
